# option_provider

./: .env.example  Makefile  README.md  __main__.py  cli.py  pyproject.toml  requirements.txt  start.sh
api/: __init__.py  app.py  dependencies.py  main.py
api/routes/: bridge.py  greeks.py  volatility.py
bridge_client/: __init__.py  async_client.py  bridge_provider.py  client.py  micro_templates.py  models.py
bridge_middleware/: __init__.py  contracts.py  dispatcher.py
bridge_middleware/adapters/: __init__.py  swing.py  vol.py
bridge_provider/: __init__.py  boundary_engine.py  boundary_rules.yaml  client.py  contracts.py  dispatcher.py  micro_templates.py  models.py
bridge_provider/adapters/: swing.py  vol.py
orats_provider/: __init__.py  cache.py  client.py  config.py  models.py  utils.py
orats_provider/greeks_exposure/: __init__.py  calculator.py  commands.py  formatter.py
orats_provider/volatility/: __init__.py  analyzer.py  commands.py  formatter.py
provider/: __init__.py  unified.py
tests/: __init__.py  conftest.py  test_api_bridge_batch.py  test_boundary_engine.py  test_bridge_client.py  test_client.py  test_greeks.py  test_greeks_commands.py  test_micro_boundary.py  test_models.py  test_orats_client.py  test_volatility.py  test_volatility_commands.py
