[project]
name = "options-provider"
version = "1.0.0"
description = "Options metrics provider: bridge client + ORATS Greeks/Volatility"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["bridge_client*", "orats_provider*", "provider*", "api*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
